# tws

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  install.sh
.github/workflows/: ci.yml  homebrew.yml  release.yml
docs/superpowers/specs/: 2026-04-08-user-configuration-design.md
src/: action.rs  app.rs  event.rs  import.rs  main.rs  theme.rs  tui.rs
src/components/: agent_preview.rs  agents_view.rs  confirm_modal.rs  finder_modal.rs  input_modal.rs  mod.rs  notes_sidebar.rs  recent_bar.rs  status_bar.rs  tree_view.rs
src/config/: keys.rs  mod.rs  palette.rs
src/core/: markdown.rs  mod.rs  model.rs  notes.rs  persistence.rs  state.rs  status.rs
src/themes/: catppuccin-frappe.toml  catppuccin-latte.toml  catppuccin-macchiato.toml  catppuccin-mocha.toml  default.toml  gruvbox-dark.toml  gruvbox-light.toml  nord.toml  tokyo-night.toml
src/tmux/: agent_scan.rs  commands.rs  mod.rs
styles/: tws-glow.json
