[package]
name = "tws"
version = "0.7.2"
edition = "2024"
description = "tmux workspace manager — organize sessions into collections and threads"
authors = ["Yusuf Taskiran"]
license = "MIT"
repository = "https://github.com/ytaskiran/tws"
keywords = ["tmux", "terminal", "tui", "workspace"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ansi-to-tui = "8"
tui-markdown = { version = "0.3.7", default-features = false }
tui-tree-widget = "0.24.0"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
